# lhdt

./: .gitignore  README.md  pretrain.py  pyproject.toml
ListOPs/: ListOpsDataModule.py
ListOPs/cython_attention_mask/: cython_attention_mask.c  cython_attention_mask.html
configs/: __init__.py  data_config.py  exps_config.py  logger_config.py  model_config.py  trainer_config.py
src/HDT/: hsparse_attn.py
src/data/: basic.py  mlm.py  ul2.py
src/lightning_modules/: HDT_modules.py
src/utils/: schedulers.py
src/utils/metrics/: scrolls.py
training_configs/: README.md  hyperparams.json  load_hyperparams.sh  train_cluster.sh  train_local.sh
